--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,34 @@
 body {
-  margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #121212;
+  background: linear-gradient(45deg, #0c0605, #622f63);
   color: #fff;
 }
 
 .app {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
-  gap: 20px;
+  height: 100vh;
+  background-color: rgba(178, 176, 176, 0.1);
+  margin: 40px;
+  border-radius: 60px;
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.profile-section {
-  flex: 1;
-  max-width: 300px;
-  border-radius: 10px;
-  background-color: #1f1f1f;
-  padding: 20px;
-  text-align: center;
+.profile {
+  /* backdrop-filter: blur(50px); */
+  /* border: 2px solid red; */
+  border-radius: 50px 50px 5px 5px;
+  height: 50%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+
 }
 
-.details-section {
-  flex: 2;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
 
-section {
-  background-color: #1f1f1f;
-  padding: 20px;
-  border-radius: 10px;
-}
 
-/* App.css */
-h2 {
-  color: #333;
-  margin-bottom: 10px;
-}
 
-ul {
-  list-style-type: none;
-  padding: 0;
-}
 
-li {
-  margin: 5px 0;
-}
 
-.technical-skills, .education, .experience, .certification, .contact-section {
-  border: 1px solid #ddd;
-  padding: 15px;
-  margin: 10px;
-  border-radius: 5px;
-  background: #f9f9f9;
-}
