--- a/src/style/SocialHandles.css
+++ b/src/style/SocialHandles.css
@@ -1,8 +1,33 @@
-.main-social {
-    background-color: #1f1f1f;
+.social-handles {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 15px;
     padding: 20px;
-    border-radius: 10px;
-    height: 250px;
-    width: 500px;
-    box-shadow: 8px 0px 8px #141414;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .social-handles h3 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    color: #fff;
+  }
+  
+  .social-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .social-link {
+    font-size: 2rem;
+    color: #fff; 
+    text-decoration: none;
+    border-radius: 50%;
+    padding: 10px;
+    transition: color 0.3s ease;
+}
+
+.social-link:hover {
+    color: #333; 
 }
