--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,9 @@
 }
  */
 
- body {
+/* main  */
+
+body {
   font-family: Arial, sans-serif;
   background: linear-gradient(45deg, #0c0605, #622f63);
   color: #fff;
@@ -57,7 +59,6 @@
 
 .grid-container {
   display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   width: 100%;
@@ -105,4 +106,47 @@
 .contact {
   grid-column: span 3;
   grid-row:  span 1;
+} 
+
+
+
+/* body {
+  font-family: Arial, sans-serif;
+  background: linear-gradient(45deg, #0c0605, #622f63);
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
+
+.app {
+  width: 100%;
+  max-width: 1200px;
+  padding: 20px;
+}
+
+.profile-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.grid-container, .profile-center {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  opacity: 0; 
+}
+
+.grid-item {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+} */
