--- a/src/style/About.css
+++ b/src/style/About.css
@@ -43,6 +43,16 @@ body, html {
     color: #EAEAEA;
     animation: fadeInUp 1.5s ease-in-out; /* Text slides in */
   }
+
+  .photography {
+    border: 1px solid rgb(194, 111, 170);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+  }
   
   /* Animations */
   @keyframes fadeIn {
