--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
-html, body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(45deg, #0c0605, #622f63);
-  color: #fff;
+
+body {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
