--- a/src/style/Layout.css
+++ b/src/style/Layout.css
@@ -1,17 +1,16 @@
 
-  
-  body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(45deg, #0c0605, #622f63);
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
+.body-wrapper {
+  background: linear-gradient(45deg, #0c0605, #622f63);
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
   .app {
     box-sizing: border-box;
     padding: 20px;
@@ -22,6 +21,8 @@
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    justify-content: center;
+    align-items: center;
   }
   
   .grid-container {
