--- a/src/style/About.css
+++ b/src/style/About.css
@@ -4,7 +4,7 @@
 }
   
   .hello {
-    background-color: rgb(54, 55, 55);
+    background: linear-gradient(45deg, #0c0605, #622f63);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,6 +39,13 @@
     animation: fadeInUp 1.5s ease-in-out; /* Text slides in */
   }
 
+  .com-wrapper{
+    gap: 10px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .photography {
     border: 1px solid rgb(194, 111, 170);
     border-radius: 20px;
@@ -46,7 +53,20 @@
     -webkit-backdrop-filter: blur(15px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.1);
-    padding: 20px;
+    padding: 10px;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  
+  .me {
+    border: 1px solid rgb(194, 111, 170);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    color: #ffffff;
   }
   
   /* Animations */
